--- a/wrap/test/CMakeLists.txt
+++ b/wrap/test/CMakeLists.txt
@@ -3,6 +3,9 @@ add_subdirectory(extract)
 if(SG_MODULE_GENERATE)
   add_subdirectory(generate)
 endif()
+if(SG_MODULE_ANALYZE)
+  add_subdirectory(analyze)
+endif()
 if(SG_MODULE_DYNAMICS)
   add_subdirectory(dynamics)
 endif()
