Refactor script analyze_graph

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -56,15 +56,20 @@ if(SG_MODULE_COMPARE)
     endif()
 endif()
 
-add_executable(analyze_graph analyze_graph.cpp)
-target_link_libraries(analyze_graph SGExtract SGAnalyze )
+add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
+target_link_libraries(analyze_graph SGExtract SGAnalyze)
 target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
 target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
+if(SG_MODULE_VISUALIZE)
+    target_link_libraries(analyze_graph SGVisualize)
+    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
+endif()
 if(VISUALIZE_USING_QT)
     target_link_libraries(analyze_graph SGVisualize )
     # target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
-    target_compile_definitions(analyze_graph PUBLIC VISUALIZE)
+    target_compile_definitions(analyze_graph PUBLIC VISUALIZE_USING_QT)
+    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
 endif()
 
 add_executable(full_graph full_graph.cpp)
