CMake: Change SG_MODULE_VISUALIZE_ENABLE_QT for SG_MODULE_VISUALIZE_WITH_QT

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -20,7 +20,7 @@ set(_scripts_targets_visualize_using_qt # Using Qt (DGtal or VTK)
     )
 
 set(VISUALIZE_USING_QT 0)
-if(VISUALIZE AND SG_MODULE_VISUALIZE_ENABLE_QT)
+if(VISUALIZE AND SG_MODULE_VISUALIZE_WITH_QT)
     set(VISUALIZE_USING_QT 1)
 endif()
 
@@ -65,11 +65,8 @@ if(SG_MODULE_VISUALIZE)
     target_link_libraries(analyze_graph SGVisualize)
     target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
 endif()
-if(VISUALIZE_USING_QT)
-    target_link_libraries(analyze_graph SGVisualize )
-    # target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
-    target_compile_definitions(analyze_graph PUBLIC VISUALIZE_USING_QT)
-    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
+if(SG_MODULE_VISUALIZE_WITH_QT)
+    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
 endif()
 
 add_executable(full_graph full_graph.cpp)
