Refactor thin script into a function

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -36,15 +36,18 @@ if(VISUALIZE_USING_QT)
     target_compile_definitions(fill_holes_binary PUBLIC VISUALIZE)
 endif()
 
-add_executable(thin thin.cpp)
+add_executable(thin thin.cpp thin_function.cpp)
 target_link_libraries(thin ${Boost_LIBRARIES} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
 target_include_directories(thin PRIVATE ${DGTAL_INCLUDE_DIRS})
-if(VISUALIZE_USING_QT)
-    # target_link_libraries(thin Qt5::Widgets Qt5::Xml )
-    target_link_libraries(thin ${VTK_LIBRARIES} )
-    target_compile_definitions(thin PUBLIC VISUALIZE)
+if(SG_MODULE_VISUALIZE)
+    target_link_libraries(thin SGVisualize )
+    target_compile_definitions(thin PUBLIC SG_MODULE_VISUALIZE_ENABLED)
+    if(SG_MODULE_VISUALIZE_WITH_QT)
+        target_compile_definitions(thin PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
+        target_compile_definitions(thin PRIVATE VISUALIZE)
+    endif()
 endif()
 
 if(SG_MODULE_COMPARE)
@@ -64,9 +67,9 @@ target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
 if(SG_MODULE_VISUALIZE)
     target_link_libraries(analyze_graph SGVisualize)
     target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
-endif()
-if(SG_MODULE_VISUALIZE_WITH_QT)
-    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
+    if(SG_MODULE_VISUALIZE_WITH_QT)
+        target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
+    endif()
 endif()
 
 add_executable(full_graph full_graph.cpp)
