Wrap thin_function and test it in python

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -51,6 +51,9 @@ if(SG_MODULE_DYNAMICS)
 endif()
 if(SG_MODULE_VISUALIZE)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_VISUALIZE_ENABLED)
+  if(SG_MODULE_VISUALIZE_WITH_QT)
+    target_compile_definitions(_sgext PRIVATE VISUALIZE)
+  endif()
 endif()
 if(SG_BUILD_SCRIPTS)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_SCRIPTS_ENABLED)
