Wrap view_image
Needs ITK to be compiled with ITKVtkGlue module to access to `itk::ViewImage`

```python
import sgext
sgext.itk.view_image(input_file="./path")
sgext.itk.view_image(input=an_sgext_itk_img)
```

Accepts different types of sgext_itk_img
For now: UC3 and F3 (unsigned char and float)

--- a/wrap/itk/CMakeLists.txt
+++ b/wrap/itk/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(current_sources_
   sgitk_init_py.cpp
   itk_image_py.cpp
+  itk_view_image_py.cpp
   )
 set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
 list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
