--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,10 @@ option(SG_MODULE_GENERATE "Generate a graph with desired statistical parameters 
 option(SG_MODULE_DYNAMICS "Perform coarse grained dynamics simulation in the network." ON)
 option(SG_MODULE_DYNAMICS_USING_VTK "Force enabling VTK in the dynamics module." OFF)
 mark_as_advanced(SG_MODULE_DYNAMICS_USING_VTK)
-CMAKE_DEPENDENT_OPTION(SG_MODULE_VISUALIZE_WITH_QT "Use QT for some visualizations" ON
-  "SG_MODULE_VISUALIZE" ON)
+option(SG_MODULE_VISUALIZE_WITH_QT "Use QT for some visualizations. It will also enable SG_MODULE_VISUALIZE." OFF)
+if(SG_MODULE_VISUALIZE_WITH_QT)
+  set(SG_MODULE_VISUALIZE ON)
+endif()
 option(VISUALIZE "Enable visualization with VTK." OFF)
 option(SG_WRAP_PYTHON "Use pybind11 to create bindings to python." OFF)
 
@@ -205,7 +207,10 @@ endif()
 set(SG_LIBRARIES "")
 include(SGModuleMacros) # module macros
 add_subdirectory(modules/core)
-add_subdirectory(modules/extract)
+if(SG_MODULE_VISUALIZE)
+  add_subdirectory(modules/visualize)
+endif()
+add_subdirectory(modules/extract) # it might use visualize
 if(SG_MODULE_ANALYZE)
   add_subdirectory(modules/analyze)
 endif()
@@ -214,9 +219,6 @@ if(SG_MODULE_LOCATE)
 endif()
 if(SG_MODULE_COMPARE)
   add_subdirectory(modules/compare)
-endif()
-if(SG_MODULE_VISUALIZE)
-  add_subdirectory(modules/visualize)
 endif()
 if(SG_MODULE_GENERATE)
   add_subdirectory(modules/generate)
