--- a/modules/extract/test/CMakeLists.txt
+++ b/modules/extract/test/CMakeLists.txt
@@ -1,6 +1,14 @@
+# Optional VISUALIZE compile definition (linking SGVisualize)
 set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS "")
-# TODO is not really optional, you just want to pass an option to VISUALIZE tests
-list(APPEND SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS SGVisualize)
+set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION "")
+if(SG_MODULE_VISUALIZE)
+  option(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE "Enable visualization in tests of this module" OFF)
+  mark_as_advanced(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE)
+  if(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE)
+    list(APPEND SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS SGVisualize)
+    set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION "VISUALIZE")
+  endif()
+endif()
 
 set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
@@ -17,4 +25,6 @@ set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_split_loop.cpp
   )
 
-SG_add_gtests()
+SG_add_gtests(
+  # Optional compile_definition (VISUALIZE)
+  ${SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION})
