Update azure-pipelines.yml for Azure Pipelines
Change tags, from sgext-x to sgext/x

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  tag-base: sgext-base
-  tag-sgext: sgext-sgext
-  tag-test: stext-test
+  tag-base: sgext/base
+  tag-sgext: sgext/sgext
+  tag-test: stext/test
 
 
 stages:
