--- a/Dockerfile-dockcross-manylinux2014
+++ b/Dockerfile-dockcross-manylinux2014
@@ -1,5 +1,5 @@
-FROM sgext/base
-MAINTAINER Pablo Hernandez Cerdan <pablo.hernandez.cerdan@outlook.com>
+FROM phcerdan/sgext-linux-base
+LABEL MAINTAINER="Pablo Hernandez Cerdan <pablo.hernandez.cerdan@outlook.com>"
 
 ###################### SGEXT #############
 ENV SGEXT_BUILD_DIR ${BUILD_PATH}/SGEXT-build
@@ -10,8 +10,9 @@ ENV SGEXT_SRC_DIR ${BUILD_PATH}/${SGEXT_SRC_FOLDER_NAME}
 WORKDIR ${SGEXT_BUILD_DIR}
 COPY . ${SGEXT_SRC_DIR}
 
-# intel-tbb (installed via apt) is installed in non-default location
-ENV TBB_ROOT /opt/intel/tbb
+# intel-tbb (installed via yum)
+RUN gosu root yum install -y tbb-devel
+# ENV TBB_ROOT /opt/intel/tbb
 RUN cmake \
         -G Ninja \
         -DCMAKE_BUILD_TYPE:STRING=Release \
@@ -23,6 +24,10 @@ RUN cmake \
         -DSG_MODULE_DYNAMICS:BOOL=ON \
         -DSG_MODULE_VISUALIZE:BOOL=OFF \
         -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF \
+        # TODO: Switch these two ON when CMake is at least 3.15 and remove Boost_ROOT
+        # -DCMAKE_FIND_PACKAGE_PREFER_CONFIG:BOOL=ON \
+        # -DBoost_DIR:STRING=${BOOST_CMAKE_CONFIG_FOLDER} \
+        -DBOOST_ROOT=${BOOST_BUILD_DIR} \
         -DITK_DIR:STRING=${ITK_BUILD_DIR} \
         -DDGtal_DIR:STRING=${DGtal_BUILD_DIR} \
         ${SGEXT_SRC_DIR} && \
@@ -33,7 +38,7 @@ ENV PATH="${SGEXT_BUILD_DIR}/cpp-scripts:${PATH}"
 
 # Build-time metadata as defined at http://label-schema.org
 ARG BUILD_DATE
-ARG IMAGE=sgext/linux
+ARG IMAGE=sgext-linux
 ARG VERSION=latest
 ARG VCS_REF
 ARG VCS_URL
@@ -42,4 +47,5 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
       org.label-schema.version=$VERSION \
       org.label-schema.vcs-ref=$VCS_REF \
       org.label-schema.vcs-url=$VCS_URL \
-      org.label-schema.schema-version="1.0"
+      org.label-schema.schema-version="1.0" \
+      build_command="docker build -f Dockerfile-dockcross-manylinux2014 . -t phcerdan/sgext-linux"
