Use Boost targets (i.e Boost::graph) instead of Boost_LIBRARIES
This also fix bug where target_include_directories was missing for
boost.
Using targets in target_link_libraries fixes it.

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -24,13 +24,15 @@ if(VISUALIZE AND SG_MODULE_VISUALIZE_WITH_QT)
     set(VISUALIZE_USING_QT 1)
 endif()
 
+set(_Boost_components Boost::program_options Boost::filesystem)
+
 add_executable(graph_to_vtp graph_to_vtp.cpp)
 target_link_libraries(graph_to_vtp SGLocate )
-target_link_libraries(graph_to_vtp ${Boost_LIBRARIES} )
+target_link_libraries(graph_to_vtp ${_Boost_components} )
 target_link_libraries(graph_to_vtp ${VTK_LIBRARIES} )
 
 add_executable(fill_holes_binary fill_holes_binary.cpp)
-target_link_libraries(fill_holes_binary ${Boost_LIBRARIES} )
+target_link_libraries(fill_holes_binary ${_Boost_components} )
 target_link_libraries(fill_holes_binary ${ITK_LIBRARIES} )
 if(VISUALIZE_USING_QT)
     target_compile_definitions(fill_holes_binary PUBLIC VISUALIZE)
@@ -38,7 +40,7 @@ endif()
 
 add_executable(thin thin.cpp thin_function.cpp)
 target_link_libraries(thin SGCore)
-target_link_libraries(thin ${Boost_LIBRARIES} )
+target_link_libraries(thin ${_Boost_components} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
 target_include_directories(thin PRIVATE ${DGTAL_INCLUDE_DIRS})
@@ -54,6 +56,7 @@ endif()
 if(SG_MODULE_COMPARE)
     add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
     target_link_libraries(merge_low_high_info_graphs SGCompare )
+    target_link_libraries(merge_low_high_info_graphs ${_Boost_components})
     if(VISUALIZE_USING_QT)
         target_link_libraries(merge_low_high_info_graphs SGVisualize )
         target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
@@ -62,6 +65,7 @@ endif()
 
 add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
 target_link_libraries(analyze_graph SGExtract SGAnalyze)
+target_link_libraries(analyze_graph ${_Boost_components})
 target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
 target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
@@ -75,6 +79,7 @@ endif()
 
 add_executable(full_graph full_graph.cpp)
 target_link_libraries(full_graph SGExtract SGAnalyze)
+target_link_libraries(full_graph ${_Boost_components})
 target_link_libraries(full_graph
     ${ITK_LIBRARIES}
     ${DGTAL_LIBRARIES}
@@ -89,22 +94,24 @@ endif()
 if(SG_MODULE_ANALYZE)
     add_executable(histograms_from_data histograms_from_data.cpp)
     target_link_libraries(histograms_from_data SGAnalyze )
+    target_link_libraries(histograms_from_data ${_Boost_components})
 endif()
 
 add_executable(create_distance_map create_distance_map.cpp create_distance_map_function.cpp)
 target_link_libraries(create_distance_map SGCore )
+target_link_libraries(create_distance_map ${_Boost_components})
 target_link_libraries(create_distance_map ${ITK_LIBRARIES} )
 target_link_libraries(create_distance_map ${DGTAL_LIBRARIES} )
 target_include_directories(create_distance_map PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
 add_executable(mask_distance_map_with_thin_image mask_distance_map_with_thin_image.cpp)
 target_link_libraries(mask_distance_map_with_thin_image SGCore )
-target_link_libraries(mask_distance_map_with_thin_image ${Boost_LIBRARIES} )
+target_link_libraries(mask_distance_map_with_thin_image ${_Boost_components} )
 target_link_libraries(mask_distance_map_with_thin_image ${ITK_LIBRARIES} )
 
 if(VISUALIZE_USING_QT)
     add_executable(highlight_image_points highlight_image_points.cpp)
-    target_link_libraries(highlight_image_points ${Boost_LIBRARIES} )
+    target_link_libraries(highlight_image_points ${_Boost_components} )
     target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
     target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
     target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
@@ -115,6 +122,7 @@ if(VISUALIZE_USING_QT)
         visualize_histograms_from_file.cpp
         # ${SG_SRC_WITH_VTK_AND_QT}
         )
+    target_link_libraries(visualize_histograms_from_file ${_Boost_components})
     target_link_libraries(visualize_histograms_from_file SGAnalyze SGVisualize )
     target_link_libraries(visualize_histograms_from_file ${ITK_LIBRARIES} )
     target_link_libraries(visualize_histograms_from_file Qt5::Widgets Qt5::Xml )
@@ -125,6 +133,7 @@ if(${_modern_VTK_available})
     if(VISUALIZE)
         add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
         target_link_libraries(visualize_graph_and_image SGVisualize)
+        target_link_libraries(visualize_graph_and_image ${_Boost_components})
         target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
         # target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
     endif()
