--- a/modules/generate/bin/CMakeLists.txt
+++ b/modules/generate/bin/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(run_simulated_annealing_generator run_simulated_annealing_generator.cpp)
 target_link_libraries(run_simulated_annealing_generator SGGenerate)
+target_link_libraries(run_simulated_annealing_generator Boost::program_options Boost::filesystem)
