CMake: ITK is optional
Required for SCRIPTS, and used optionally in VISUALIZE module.
Also a test in core uses it.

Make all of them conditional with variable SG_REQUIRES_ITK

--- a/modules/core/test/CMakeLists.txt
+++ b/modules/core/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
-  ${ITK_LIBRARIES}
   ${GTEST_LIBRARIES})
+
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_bounding_box.cpp
   test_edge_points_utilities.cpp
@@ -10,10 +10,13 @@ set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_graph_data.cpp
   test_graphviz_io.cpp
   test_shortest_path.cpp
-  test_transform_to_physical_point.cpp
   test_split_edge.cpp
   test_boundary_conditions.cpp
   test_spatial_graph_utilities.cpp
   )
+if(SG_REQUIRES_ITK)
+  list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS ${ITK_LIBRARIES})
+  list(APPEND SG_MODULE_${SG_MODULE_NAME}_TESTS test_transform_to_physical_point.cpp)
+endif()
 
 SG_add_gtests()
