--- a/cmake/SGEXTConfig.cmake.in
+++ b/cmake/SGEXTConfig.cmake.in
@@ -2,24 +2,29 @@
 
 include(CMakeFindDependencyMacro)
 
-find_dependency(Boost COMPONENTS program_options filesystem graph REQUIRED)
+#### Required dependencies  ####
+find_dependency(Boost REQUIRED COMPONENTS program_options filesystem graph)
 find_dependency(DGtal REQUIRED 1.0)
-find_dependency(ITK CONFIG REQUIRED)
-# VTK is "optional" (only required if using SGVtk)
-find_package(VTK COMPONENTS
-  vtkChartsCore
-  vtkCommonCore
-  vtkCommonDataModel
-  vtkInteractionStyle
-  vtkRenderingCore
-  vtkRenderingOpenGL2 # avoid vtkRenderer, vtkRenderWindow not found at run time
-  vtkRenderingContextOpenGL2 # avoid vtkContextDevice2D not found at run time
-  vtkViewsContext2D
-  vtkInteractionWidgets
-  vtkViewsInfovis
-  # vtkGUISupportQt # QVTKWidget.h
-  CONFIG
-  )
+
+#### Optional dependencies based on SGEXT options ####
+if(@SG_REQUIRES_ITK@) #if(${SG_REQUIRES_ITK})
+  find_dependency(ITK REQUIRED COMPONENTS
+    @itk_components@
+    CONFIG)
+endif()
+if(@SG_MODULE_VISUALIZE_WITH_QT@) #if (${SG_MODULE_VISUALIZE_WITH_QT})
+  find_dependency(Qt5 REQUIRED
+    Widgets
+    Xml
+    OpenGL)
+endif()
+if(@SG_REQUIRES_VTK@) # if(${SG_REQUIRES_VTK})
+  find_dependency(VTK COMPONENTS
+    @vtk_components@
+    CONFIG
+    REQUIRED
+    )
+endif()
 
 get_filename_component(SGEXT_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 if(NOT TARGET SGCore)
