CMake: Add `install-runtime` target
Only installing libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,3 +287,10 @@ configure_package_config_file(
   NO_CHECK_REQUIRED_COMPONENTS_MACRO # SGEXT does not provide components
   )
 
+# Add custom target to only install component: runtime (libraries)
+add_custom_target(install-runtime
+  ${CMAKE_COMMAND}
+  -DCMAKE_INSTALL_COMPONENT=runtime
+  -P "${PROJECT_BINARY_DIR}/cmake_install.cmake"
+  )
+
