--- a/modules/visualize/CMakeLists.txt
+++ b/modules/visualize/CMakeLists.txt
@@ -70,6 +70,7 @@ install(TARGETS ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        COMPONENT runtime
         )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
