--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -62,10 +62,13 @@ if(SG_BUILD_SCRIPTS)
 endif()
 
 install(TARGETS _sgext
-  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR})
+  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR}
+  COMPONENT runtime
+  )
 install(FILES __init__.py
-  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR})
-
+  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR}
+  COMPONENT runtime
+  )
 # Copy __init__ at configure time
 file(COPY __init__.py DESTINATION ${CMAKE_BUILD_PYTHONLIBDIR})
 # Copy at build time
