CMake: Select VTK components based on modules
Also disable building tests by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_BUILD_PYTHONLIBDIR ${PROJECT_BINARY_DIR}/sgext) # copy python libs at 
 
 include(CMakeDependentOption)
 option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
-option(SG_BUILD_TESTING "Enable Tests" ON)
+option(SG_BUILD_TESTING "Enable Tests" OFF)
 option(SG_BUILD_ENABLE_VALGRIND "Enable Valgrind as a memchecker for tests (require debug symbols)" OFF)
 mark_as_advanced(SG_BUILD_ENABLE_VALGRIND)
 option(SG_MODULE_ANALYZE "Analyze the graph properties." ON)
@@ -34,7 +34,7 @@ if(SG_MODULE_VISUALIZE_WITH_QT)
   set(SG_MODULE_VISUALIZE ON)
 endif()
 option(VISUALIZE "Enable visualization with VTK." OFF)
-option(SG_ENABLE_ITK "Use ITK. Required for SCRIPTS, and optionally for VISUALIZE modules." ON)
+option(SG_ENABLE_ITK "Use ITK. Required for SCRIPTS, and optionally for VISUALIZE modules." OFF)
 option(SG_WRAP_PYTHON "Use pybind11 to create bindings to python." OFF)
 
 
@@ -101,7 +101,7 @@ if(SG_REQUIRES_ITK)
   include(${ITK_USE_FILE})
 endif() #ITK
 
-set(vtk_qt_components)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 if(SG_MODULE_VISUALIZE_WITH_QT)
   find_package(Qt5 REQUIRED
     Widgets
@@ -109,11 +109,17 @@ if(SG_MODULE_VISUALIZE_WITH_QT)
     OpenGL)
   message(STATUS "Qt5 version: ${Qt5_VERSION}")
 
-  if(Qt5_POSITION_INDEPENDENT_CODE)
-    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-  endif()
   set(vtk_qt_components
     vtkGUISupportQt # QVTKWidget.h
+    )
+endif()
+if(SG_MODULE_VISUALIZE)
+  set(vtk_components_visualize
+    vtkInteractionStyle
+    vtkRenderingContextOpenGL2 # avoid vtkContextDevice2D not found at run time
+    vtkRenderingVolumeOpenGL2 # For volume rendering SmartVolumeMapper
+    vtkViewsContext2D
+    vtkInteractionWidgets
     )
 endif()
 
@@ -123,14 +129,11 @@ if(SG_REQUIRES_VTK)
     vtkChartsCore
     vtkCommonCore
     vtkCommonDataModel
-    vtkInteractionStyle
-    vtkRenderingCore
-    vtkRenderingOpenGL2 # avoid vtkRenderer, vtkRenderWindow not found at run time
-    vtkRenderingContextOpenGL2 # avoid vtkContextDevice2D not found at run time
-    vtkRenderingVolumeOpenGL2 # For volume rendering SmartVolumeMapper
-    vtkViewsContext2D
-    vtkInteractionWidgets
+    # avoid AUTOINIT_redefined at build time,
     vtkViewsInfovis
+    vtkRenderingCore
+    vtkRenderingOpenGL2 #  vtkRenderer, vtkRenderWindow not found at run time
+    ${vtk_components_visualize}
     ${vtk_qt_components}
     )
   # VTK components to handle external dependency histo-header
