--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Deploy artifacts
+deploy/_skbuild/
+deploy/dist/
+deploy/sgext.egg-info/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
