--- a/modules/compare/CMakeLists.txt
+++ b/modules/compare/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SG_MODULE_NAME "Compare")
 set(SG_MODULE_${SG_MODULE_NAME}_LIBRARY "SG${SG_MODULE_NAME}")
-list(APPEND SG_LIBRARIES ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY})
+set(SG_LIBRARIES ${SG_LIBRARIES} ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} PARENT_SCOPE)
 set(SG_MODULE_INTERNAL_DEPENDS SGCore SGLocate)
 set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
   ${SG_MODULE_INTERNAL_DEPENDS}
