--- a/modules/generate/CMakeLists.txt
+++ b/modules/generate/CMakeLists.txt
@@ -77,7 +77,7 @@ endif()
 
 set(SG_MODULE_NAME "Generate")
 set(SG_MODULE_${SG_MODULE_NAME}_LIBRARY "SG${SG_MODULE_NAME}")
-list(APPEND SG_LIBRARIES ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY})
+set(SG_LIBRARIES ${SG_LIBRARIES} ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} PARENT_SCOPE)
 set(SG_MODULE_INTERNAL_DEPENDS
   SGCore
   PERMCore # From perm-montecarlo
