Add subproject to automatically handle 3rd party dependencies
The folder dependencies contains a CMake project using ExternalProject
to download and build 3rd dependencies.

Accepted options are:
`WITH_ITK`, `WITH_VTK`, `WITH_TBB` (tbb will only be built in Linux)

The output folder of the project: sgext-dependencies
(that can be modified with -DOUTPUT_BUILD_DIR=/path/to)
contains the 3rd party dependencies:
boost-build, (installed at build time)
DGtal-src, DGtal-build
VTK-src, VTK-build
ITK-src, ITK-build
tbb-build, (installed at build time)

The SGEXT project now accepts the option:
`DEPENDENCIES_BUILD_DIR` that should be pointed to
`OUTPUT_BUILD_DIR` of the sgext-dependencies project.
This will allow to automatically sets all dependencies.
However, at any time, this can be overridden setting a new
VTK_DIR, ITK_DIR, DGtal_DIR, Boost_DIR, TBB_ROOT (or TBB_DIR), etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 3.8.1)
 if(POLICY CMP0048)
   cmake_policy(SET CMP0048 NEW)
 endif()
+# To use TBB_ROOT in find_package
+if(POLICY CMP0074)
+  cmake_policy(SET CMP0074 NEW)
+endif()
 
 project(SGEXT
   VERSION 0.9.0
@@ -37,6 +41,9 @@ option(VISUALIZE "Enable visualization with VTK." OFF)
 option(SG_ENABLE_ITK "Use ITK. Required for SCRIPTS, and optionally for VISUALIZE modules." OFF)
 option(SG_WRAP_PYTHON "Use pybind11 to create bindings to python." OFF)
 
+set(DEPENDENCIES_BUILD_DIR "" CACHE PATH "Base folder generated from building the sub-project ./dependencies. It contains boost-build, DGtal-build, etc.")
+# The following script will set ITK_DIR, VTK_DIR DGtal_DIR, etc. Based on DEPENDENCIES_BUILD_DIR.
+include(handle_dependencies)
 
 if(VISUALIZE OR SG_MODULE_VISUALIZE OR SG_MODULE_LOCATE OR SG_MODULE_COMPARE OR SG_MODULE_DYNAMICS_USING_VTK)
   set(SG_REQUIRES_VTK TRUE)
@@ -61,6 +68,7 @@ find_package(Boost COMPONENTS
 
 find_package(DGtal REQUIRED 1.0)
 message(STATUS "DGtal version: ${DGtal_VERSION}")
+message(STATUS "DGtal_DIR: ${DGtal_DIR}")
 
 if(SG_REQUIRES_ITK)
   find_package(ITK CONFIG REQUIRED)
@@ -98,6 +106,7 @@ if(SG_REQUIRES_ITK)
     CONFIG
     )
   message(STATUS "ITK version: ${ITK_VERSION}")
+  message(STATUS "ITK_DIR: ${ITK_DIR}")
   include(${ITK_USE_FILE})
 endif() #ITK
 
