--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -19,11 +19,6 @@ set(_scripts_targets_visualize_using_qt # Using Qt (DGtal or VTK)
     visualize_histograms_from_file
     )
 
-set(VISUALIZE_USING_QT 0)
-if(VISUALIZE AND SG_MODULE_VISUALIZE_WITH_QT)
-    set(VISUALIZE_USING_QT 1)
-endif()
-
 set(_Boost_components Boost::program_options Boost::filesystem)
 
 add_executable(graph_to_vtp graph_to_vtp.cpp)
@@ -34,7 +29,7 @@ target_link_libraries(graph_to_vtp ${VTK_LIBRARIES} )
 add_executable(fill_holes_binary fill_holes_binary.cpp)
 target_link_libraries(fill_holes_binary ${_Boost_components} )
 target_link_libraries(fill_holes_binary ${ITK_LIBRARIES} )
-if(VISUALIZE_USING_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT)
     target_compile_definitions(fill_holes_binary PUBLIC VISUALIZE)
 endif()
 
@@ -57,7 +52,7 @@ if(SG_MODULE_COMPARE)
     add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
     target_link_libraries(merge_low_high_info_graphs SGCompare )
     target_link_libraries(merge_low_high_info_graphs ${_Boost_components})
-    if(VISUALIZE_USING_QT)
+    if(SG_MODULE_VISUALIZE_WITH_QT)
         target_link_libraries(merge_low_high_info_graphs SGVisualize )
         target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
     endif()
@@ -85,7 +80,7 @@ target_link_libraries(full_graph
     ${DGTAL_LIBRARIES}
     )
 target_include_directories(full_graph PRIVATE ${DGTAL_INCLUDE_DIRS})
-if(VISUALIZE_USING_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT)
     target_link_libraries(full_graph SGVisualize )
     # target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
     target_compile_definitions(full_graph PUBLIC VISUALIZE)
@@ -109,7 +104,7 @@ target_link_libraries(mask_distance_map_with_thin_image SGCore )
 target_link_libraries(mask_distance_map_with_thin_image ${_Boost_components} )
 target_link_libraries(mask_distance_map_with_thin_image ${ITK_LIBRARIES} )
 
-if(VISUALIZE_USING_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT)
     add_executable(highlight_image_points highlight_image_points.cpp)
     target_link_libraries(highlight_image_points ${_Boost_components} )
     target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
@@ -130,7 +125,7 @@ endif()
 
 
 if(${_modern_VTK_available})
-    if(VISUALIZE)
+    if(SG_MODULE_VISUALIZE)
         add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
         target_link_libraries(visualize_graph_and_image SGVisualize)
         target_link_libraries(visualize_graph_and_image ${_Boost_components})
@@ -139,11 +134,11 @@ if(${_modern_VTK_available})
     endif()
 endif()
 
-if(VISUALIZE)
+if(SG_MODULE_VISUALIZE)
     list(APPEND _scripts_targets ${_scripts_targets_visualize})
 endif()
 
-if(VISUALIZE_USING_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT)
     list(APPEND _scripts_targets ${_scripts_targets_visualize_using_qt})
 endif()
 
